Fixed a styling issue where the all agenderingen link to open the dedicated module would be overlapped by another element, making it unable to be clicked

--- a/FrontEnd/Modules/TaskAlerts/Css/TaskAlerts.css
+++ b/FrontEnd/Modules/TaskAlerts/Css/TaskAlerts.css
@@ -155,7 +155,7 @@ html, body {
     margin: 0;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    justify-self: end;
 }
 
     #taskList ~ .actions:after {
